# Yolo11_NCNN_Compose

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/polytron/yolo11ncnncompose/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best_Damage.ncnn.param
app/src/main/java/com/polytron/yolo11ncnncompose/: CameraScreen.kt  MainActivity.kt  MyNcnn.kt  Ncnn.kt  YOLO11Ncnn.kt
app/src/main/java/com/polytron/yolo11ncnncompose/di/: AppModule.kt  MyApp.kt
app/src/main/java/com/polytron/yolo11ncnncompose/socket/: SocketViewModel.kt
app/src/main/java/com/polytron/yolo11ncnncompose/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  main_ncnn.cpp  yolo11.cpp  yolo11.h  yolo11_det.cpp  yolo11ncnn.cpp
app/src/main/jni/hand-landmark/: mediapipehand.cpp  ncnn_handlandmark.cpp
app/src/main/jni/myncnn/: myncnn.cpp  myncnn.h
app/src/main/jni/myncnn/type/: detection.cpp  pose.cpp
app/src/main/jni/ncnn/: myncnn.cpp  myncnn.h
app/src/main/jni/socket/: TcpClient.cpp
app/src/main/jni/yolo/: yolo11_det.cpp  yolo11ncnn.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/polytron/yolo11ncnncompose/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
